--- a/.ae.mw
+++ b/.ae.mw
@@ -1,4 +1,6 @@
-'''.ae''' om [[Araban Ühtenzoittud Emiratad|Araban Ühtenzoittud Emiratoiden]] [[DNS|Internet-domen]]. Se om avaitud [[1992. voz'|1992]]-nden voden 1. päiväl tal'vkud.<ref>[http://iana.org/domains/root/db/ae.html IANA — .ae Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
+'''.ae''' om [[Araban Ühtenzoittud Emiratad|Araban Ühtenzoittud Emiratoiden]] [[DNS|Internet-domen]]. Se om avaitud [[1992. voz'|1992]]-nden voden 1. päiväl tal'vkud<ref>[http://iana.org/domains/root/db/ae.html IANA — .ae Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Vn 2020 tal'vkus enamba 220 tuhad domennimid oli registriruidud .ae-zonas.
+
+Registracii om lasktud kahtendel tazopindal röunadusita. Registracii koumandel tazopindal küzub rezidentan dokumentoid kompanijaspäi i personaspäi, ministrusen sertifikatad (aladomenoiš org, mil, gov, sch, ac). Kaikiš statjoiš vaiše akkredituidud registratorale sab antta domennimed, mugomid oli 22 vl 2020.
 
 == Homaičendad ==
 <references />
@@ -7,6 +9,7 @@
 * [http://www.tra.gov.ae/aeda/ Domenan sait (''tra.gov.ae'').] {{ref-ar}} {{ref-en}}
 * [http://www.nic.ae/ Domenan enzne sait (''nic.ae'').] {{ref-en}} {{ref-ar}}
 * [http://iana.org/domains/root/db/ae.html IANA-informacii (''iana.org'').] {{ref-en}}
+{{Commons|Category:.ae}}
 
 {{CcTLD}}
 
