*Empty MediaWiki Message*

--- a/.ag.mw
+++ b/.ag.mw
@@ -1,6 +1,6 @@
 '''.ag''' om [[Antigua da Barbud|Antiguan da Barbudan]] [[DNS|Internet-domen]]. Se om avaitud [[1991. voz'|1991]]-nden voden 3. päiväl sügüz'kud<ref>[http://iana.org/domains/root/db/ag.html IANA — .ag Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Kävutase verhiš maiš päazjan.
 
-Registracii om lasktud kahtendel i koumandel tazopindoil, valdkundan rezidentoile i verazmalaižile, kompanijoile i personoile. Domennimen registracii maksab (vn 2014 andmused) 50..75 US$ valdkundan rezidentoiden täht i 100..150 US$ verazmalaižiden täht, rezidendoiden registracii om maksutoi .org.ag-, .edu.ag- i .gov.ag-domenoil.
+Registracii om lasktud kahtendel i koumandel tazopindoil, valdkundan rezidentoile i verazmalaižile, kompanijoile i personoile. Domennimen registracii maksab (vn 2014 andmused) 50..75 US$ valdkundan rezidentoiden täht i 100..150 US$ verazmalaižiden täht, rezidentoiden registracii om maksutoi .org.ag-, .edu.ag- i .gov.ag-domenoil.
 
 Domennimi om populärine saksankel'žiš maiš (Saksanma, Avstrii, Šveicarii), niiden kompanijoiden AG-lühenduz znamoičeb «akcionerine sebr». Ottas kävutamižhe mugažo [[maižanduz|maižandushe]] sidodud kompanijad ({{lang-en|agriculture}} «maižanduz»), [[hobed]]an samižen da torguindan edheotandad (sen himine znam om Ag).
 
