--- a/Kirkjubajarklöistür.mw
+++ b/Kirkjubajarklöistür.mw
@@ -9,11 +9,13 @@
  | Telefonkod = +354-
  | Aigvö = [[UTC]]+0
 }}
-'''Kirkjubajarklöistür''' ({{lang-is|Kirkjubæjarklaustur}}, sijaline lühenduz om ''Klaustur'') om külä [[Islandii|Islandijan]] suves. Mülüb [[Suvine agj (Islandii)|Suvižen agjan]] Skaftaurhreppür-kundha (6946 km², läz 500 eläjad), sen kaikiš suremb eländpunkt.
+'''Kirkjubajarklöistür''' ({{lang-is|Kirkjubæjarklaustur}} [ˈcʰɪr̥cʏˌˈpaiːjarˌˈkʰlœistʏr̥] «jumalanpert' + ferm + [[klostür|jumalankodin südäitanaz]]», sijaline lühenduz om ''Klaustur'') om külä [[Islandii|Islandijan]] suves. Mülüb [[Suvine agj (Islandii)|Suvižen agjan]] Skaftaurhreppür-kundha (6946 km², läz 500 eläjad), sen kaikiš suremb eländpunkt.
 
 Eländpunkt mainitase ezmäižen kerdan vl 1186. Külä mülüb turistoiden popularižihe matkoihe čoman londusen tagut.
 
 Vl 2011 kaikenaigaižiden elajiden lugu oli 120 ristitud.
+
+Bankan palakund i počt, supermarket i benzintäutandstancii ratas küläs, ned holitadas ümbärdajiden fermoiden-ki eläjid.
 
 == Irdkosketused ==
 * [http://www.klaustur.is/ Külän oficialine sait (''klaustur.is'').] {{ref-is}} {{ref-en}}
