--- a/Kirkjubajarklöistür.mw
+++ b/Kirkjubajarklöistür.mw
@@ -9,10 +9,13 @@
  | Telefonkod = +354-
  | Aigvö = [[UTC]]+0
 }}
-'''Kirkjubajarklöistür''' ({{lang-is|Kirkjubæjarklaustur}} [ˈcʰɪr̥cʏˌˈpaiːjarˌˈkʰlœistʏr̥] «jumalanpert' + ferm + [[klostür|jumalankodin südäitanaz]]», sijaline lühenduz om ''Klaustur'') om külä [[Islandii|Islandijan]] suves. Mülüb [[Suvine agj (Islandii)|Suvižen agjan]] Skaftaurhreppür-kundha (6946 km², läz 500 eläjad), sen kaikiš suremb eländpunkt.
+'''Kirkjubajarklöistür''' ({{lang-is|Kirkjubæjarklaustur}} [ˈcʰɪr̥cʏˌˈpaiːjarˌˈkʰlœistʏr̥] «jumalanpert' + ferm + [[kluatr|jumalankodin südäitanaz]]», sijaline lühenduz om ''Klaustur'') om külä [[Islandii|Islandijan]] suves. Mülüb [[Suvine agj (Islandii)|Suvižen agjan]] Skaftaurhreppür-kundha (6946 km², läz 500 eläjad), sen kaikiš suremb eländpunkt.
 
 Eländpunkt mainitase ezmäižen kerdan vl 1186. Külä mülüb turistoiden popularižihe matkoihe čoman londusen tagut.
 
+Külä sijadase avtotel [[Vik (Islandii)|Vik]]-žilospäi, kudamb om kaikiš suvemb valdkundas. Matkad [[Reikjavik]]-pälidnhasai om 190 km päivlaskmha.
+
+== Eläjad ==
 Vl 2011 kaikenaigaižiden elajiden lugu oli 120 ristitud.
 
 Bankan palakund i počt, supermarket i benzintäutandstancii ratas küläs, ned holitadas ümbärdajiden fermoiden-ki eläjid.
