*Empty MediaWiki Message*

--- a/Kirkjubajarklöistür.mw
+++ b/Kirkjubajarklöistür.mw
@@ -18,7 +18,7 @@ Külä sijadase avtotel [[Vik (Islandii)|Vik]]-žilospäi, kudamb om kaikiš suv
 == Eläjad ==
 Vl 2011 kaikenaigaižiden elajiden lugu oli 120 ristitud.
 
-Bankan palakund i počt, supermarket i benzintäutandstancii ratas küläs, ned holitadas ümbärdajiden fermoiden-ki eläjid.
+Bankan palakund i počt, supermarket i avtotäutandstancii ratas küläs, ned holitadas ümbärdajiden fermoiden-ki eläjid.
 
 == Irdkosketused ==
 * [http://www.klaustur.is/ Külän oficialine sait (''klaustur.is'').] {{ref-is}} {{ref-en}}
