--- a/Albanijan_valdkundznam.mw
+++ b/Albanijan_valdkundznam.mw
@@ -1,10 +1,7 @@
 [[Fail:Coat of arms of Albania.svg|right|250px]]
 '''Albanijan valdkundznam''' ({{lang-sq|Stema e Shqipërisë}}) om [[Albanijan Tazovaldkund]]an üks' oficialižiš simvolišpäi. Nügüdläine versii om vahvištadud vl 1998 voziden 1925−1946 toižendoiden alusel.
 
-Must kaks'päine stilizuidud [[orl]] kuvadase rusttal tagamal. Likundan Albanijan ripmatomudes [[Skanderbeg]]-vejan istorine šlöm panese orlan ülähäspäi, se kuldaine šlöm mülütab ližapähišt [[ižakoza]]n pän nägul. Laudan röun om kuldaine.
-
-== Kacu mugažo ==
-* [[Albanijan flag]]
+Must kaks'päine stilizuidud [[orl]] kuvadase rusttal tagamal, ani kuti [[Albanijan flag]]al. Likundan Albanijan ripmatomudes [[Skanderbeg]]-vejan istorine šlöm panese orlan ülähäspäi, se kuldaine šlöm mülütab ližapähišt [[ižakoza]]n pän nägul. Laudan röun om kuldaine.
 
 {{Commons|Category:National coats of arms of Albania}}
 
