--- a/Albanijan_valdkundznam.mw
+++ b/Albanijan_valdkundznam.mw
@@ -4,7 +4,7 @@
 Must kaks'päine stilizuidud [[orl]] kuvadase rusttal tagamal, ani kuti [[Albanijan flag]]al. Likundan Albanijan ripmatomudes [[Skanderbeg]]-vejan istorine šlöm panese orlan ülähäspäi, se kuldaine šlöm mülütab ližapähišt [[ižakoza]]n pän nägul. Laudan röun om kuldaine.
 
 == Edeližed valdkundznamad ==
-<gallery>
+<gallery mode="packed" heights="125px">
 Coat of arms of the Principality of Albania.svg|Albanijan Ruhtinazkundan valdkundznam<br/>(1914−1925)
 Coat of arms of the Albania (1925-1928).svg|Albanijan Tazovaldkundan valdkundznam<br/>(1925−1928)
 Coat of arms of the Albanian Kingdom (1928–1939).svg|Albanijan Kunigahusen valdkundznam<br/>(1928−1939)
