--- a/Albanijan_valdkundznam.mw
+++ b/Albanijan_valdkundznam.mw
@@ -9,7 +9,8 @@ Coat of arms of the Principality of Albania.svg|Albanijan Ruhtinazkundan valdkun
 Coat of arms of the Albania (1925-1928).svg|Albanijan Tazovaldkundan valdkundznam<br/>(1925−1928)
 Coat of arms of the Albanian Kingdom (1928–1939).svg|Albanijan Kunigahusen valdkundznam<br/>(1928−1939)
 Royal Coat of arms of Albania (1939–1943).svg|Albanijan valdkundznam italižen okkupacijan aigan<br/>(1939−1943)
-Coat of arms of the People's Republic of Albania.svg|
+Coat of arms of the People's Republic of Albania.svg|Albanijan Rahvahaližen Socialistižen Tazovaldkundan valdkundznam<br/>(1946–1992)
+Coat of arms of Albania (1992-1998).svg|Albanijan valdkundznam<br/>(1992–1998)
 </gallery>
 
 {{Commons|Category:National coats of arms of Albania}}
