--- a/Remedios_(Kuba).mw
+++ b/Remedios_(Kuba).mw
@@ -16,8 +16,12 @@
 {{znamoičendad|Remedios}}
 '''Remedios''' (mugažo [[ispanijan kel'|ispanijan kelel]], virktas [reˈmeðjos]), täuz' nimituz om '''San Huan de los Remedios''' ({{lang-es|San Juan de los Remedios}}) om [[Kuba]]n lidn [[Vil'ja Klar]]-agjan päivnouzmas.
 
-Eländpunktan aluz om pandud vl 1513.
+== Istorii ==
+Eländpunktan aluz om pandud vl 1513, se om kaikiš amuižembiš ispanijalaižiden eländpunktoišpäi sarel, kahtenz' vai kahesanz' erazvuiččiden dokumentoiden mödhe. Eziauguine nimituz oli ''Santa Cruz de la Sabana''. Möhemba nimed oliba ''Santa Cruz de Vasco Porcallo'', ''Santa Cruz de la Sabana del Cayo'', i lopuks, vspäi 1578, ''San Juan de los Remedios de la Sabana del Cayo''.
 
+Remediosan tahond šingotihe lehmänlihan kazvatandal da sen tondal Ispanijan Floridan kolonijoihe. 17. voz'sadan lopuspäi kazvatadihe maižanduzkul'turoid orjiden radon abunke: tabak, saharrogo, kofepud i kakaopud.
+
+== Geografijan andmused ==
 Lidn sijadase Kuba-saren keskuzpalan lodehes, 5 kilometras sen pohjoižrandištonno, 25 m ü.m.t. keskmäižel korktusel. Matkad agjan administrativižhe [[Santa Klar]]-keskushesai om 40 km päivlaskmha, [[Kaibarjen]]-merikurorthasai lendimportanke om 8 km päivnouzmha.
 
 Vl 2004 eläjiden lugu oli 46 482 ristitud.
