+ galerei, +hom, aktualizacii

--- a/Jurg.mw
+++ b/Jurg.mw
@@ -5,16 +5,16 @@
  | Lidnanznam text = Jurgan lidnanznam
  | Flag text = Jurgan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 81,733
- | Voz' = 2017
+ | Eläjiden lugu = 80,367
+ | Voz' = 2021
  | Pind = 44.8
  | Fail = Yurga, Kemerovo Oblast, Russia.jpg
- | Pämez' = Sergei Popov<br />(kezaku 2011—)
+ | Pämez' = Aleksei Fomin<br />(sügüz'ku 2019—)
  | Telefonkod = +7-38451-xx-xxx
  | Avtokod = 42. 142
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
 }}
-'''Jurg''' ({{lang-ru|Юрга}}) om [[Venäma]]n lidn da lidnümbrik [[Kemerovon agj]]an lodehes. Se om agjan seičemenz' lidn eläjiden lugun mödhe, mugažo [[Jurgan rajon]]an administrativižeks keskuseks.
+'''Jurg''' ({{lang-ru|Юрга́}}) om [[Venäma]]n lidn da lidnümbrik [[Kemerovon agj]]an lodehes. Se om agjan seičemenz' lidn eläjiden lugun mödhe, mugažo [[Jurgan rajon]]an administrativižeks keskuseks.
 
 == Istorii ==
 Eländpunktan aluz om pandud vl 1886. Kätihe radnikžilod lidnaks vl 1949.
@@ -31,7 +31,17 @@ Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 81 533 ristitud. K
 
 Rahvahad (enamba 0,4% vl 2010): [[venälaižed]] — 93,2%, [[totarlaižed]] — 2,5%, [[saksalaižed]] — 1,2%, [[ukrainalaižed]] — 0,7%, [[armenijalaižed]] — 0,4%, toižed rahvahad — 2,0%.
 
-Professionaližen opendusen aluzkundad oma Jurgan tehnologine kolledž, kaks' tehnikumad, tehnologine institut, Kemerovon valdkundaližen universitetan filial.
+Professionaližen opendusen aluzkundad oma Jurgan tehnologine kolledž<ref>[http://ytk.edu.ru/ Jurgan tehnologižen kolledžan sait (''ytk.edu.ru'').] {{ref-ru}}</ref>, kaks' tehnikumad, tehnologine institut<ref>[http://uti.tpu.ru/ Jurgan tehnologižen institutan sait (''uti.tpu.ru'').] {{ref-ru}}</ref> (Tomskan politehnižen universitetan filial), Kemerovon valdkundaližen universitetan filial.
+
+Edeline lidnümbrikon pämez' om Sergei Popov (kezaku 2011 — sügüz'ku 2019).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Общий вид на памятник.jpg|Memorial sijaližile pölištunuzile sodamehile [[Sur' Tatanmaine soda|Suren sodan]] aigan (2013)
+Л-3815, Россия, Кемеровская область, станция Юрга-I (Trainpix 204678).jpg|L-klassan puruvedim-muštnik (2017)
+Yurga-pobeda.jpg|«Pobeda»-kul'turkeskuz (2008, ''Vägestuz'')
+Жд вокзал - panoramio (8).jpg|Jurg I-päraudtestancijan sauvused vl 2014
+</gallery>
 
 == Homaičendad ==
 <references />
