*Empty MediaWiki Message*

--- a/Jurg.mw
+++ b/Jurg.mw
@@ -37,10 +37,10 @@ Edeline lidnümbrikon pämez' om Sergei Popov (kezaku 2011 — sügüz'ku 2019).
 
 == Galerei ==
 <gallery mode="packed" heights="125px">
-Общий вид на памятник.jpg|Memorial sijaližile pölištunuzile sodamehile [[Sur' Tatanmaine soda|Suren sodan]] aigan (2013)
-Л-3815, Россия, Кемеровская область, станция Юрга-I (Trainpix 204678).jpg|L-klassan puruvedim-muštnik (2017)
+Общий вид на памятник.jpg|Memorial sijaližile pölištunuzile [[Sur' Tatanmaine soda|Suren sodan]] aigan sodamehile (2013)
+Л-3815, Россия, Кемеровская область, станция Юрга-I (Trainpix 204678).jpg|L-klassan puruvedim-muštnik päraudtestancijanno (2017)
 Yurga-pobeda.jpg|«Pobeda»-kul'turkeskuz (2008, ''Vägestuz'')
-Жд вокзал - panoramio (8).jpg|Jurg I-päraudtestancijan sauvused vl 2014
+Жд вокзал - panoramio (8).jpg|Jurg I-päraudtestancijan sauvuz vl 2014
 </gallery>
 
 == Homaičendad ==
