--- a/Kaltan.mw
+++ b/Kaltan.mw
@@ -1,12 +1,12 @@
 {{Eländpunkt
  | Nimi = Kaltan<br />Калтан
  | Lidnanznam = Coat of Arms of Kaltan (Kemerovo oblast).png
- | Flag =
+ | Flag = Flag of Kaltan.svg
  | Lidnanznam text = Kaltanan lidnanznam
- | Flag text =
+ | Flag text = Kaltanan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 20,947
- | Voz' = 2017
+ | Eläjiden lugu = 20,193
+ | Voz' = 2021
  | Pind = 32.36
  | Fail = Южно-Кузбасская ГРЭС Июль 2013.jpg
  | Pämez' = Igor' Goldinov<br />(tal'vku 2010—)
@@ -14,20 +14,27 @@
  | Avtokod = 42. 142
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
 }}
-'''Kaltan''' ({{lang-ru|Калтан}}) om [[Venäma]]n lidn [[Kemerovon agj]]an suves. Se om lidn agjan alištusenke (vspäi 1993), [[Kaltanan lidnümbrik]]on administrativine keskuz.
+'''Kaltan''' ({{lang-ru|Калта́н}}) om [[Venäma]]n lidn [[Kemerovon agj]]an suves. Se om lidn agjan alištusenke (vspäi 1993), [[Kaltanan lidnümbrik]]on administrativine keskuz.
 
 == Istorii ==
-Eländpunkt mainitase ezmäižen kerdan Tomskan gubernijan elänzoittud tahoiden nimikirjuteses vl 1859 kuti ''Kaltanskai-külä'' 128 eläjanke. Kätihe ''Alakaltan-küläd'' ({{lang-ru|Нижний Калтан}}) radnikžiloks vl 1949. Se sai lidnan statusad vn 1959 29. päiväl heinkud. Raudtestancii om olmas vspäi 1930.
+Eländpunkt mainitase ezmäižen kerdan Tomskan gubernijan elänzoittud tahoiden nimikirjuteses vl 1859 kuti ''Kaltanskai-külä'' 128 eläjanke. Kätihe ''Alakaltan-küläd'' ({{lang-ru|Нижний Калтан}}) radnikžiloks Kaltan-nimenke vl 1949. Se sai lidnan statusad vn 1959 29. päiväl heinkud. Kaltan-raudtestancii om olmas vspäi 1930.
 
-Lidn šingotase [[kivihil'|kivihilen]] samižel (2 kaivut) i Suvikuzbassan GRES:al kivihilenke poltuseks, sauvondmaterialiden edheotandoil (savičtegim, metalližkonstrukcijad) i lämbituzmašiništon tegimel.
+Kaltan šingotase [[kivihil'|kivihilen]] samižel (kaks' kaivut) i Suvikuzbassan GRES:al kivihilenke poltuseks, sauvondmaterialiden edheotandoil (savičtegim, metalližkonstrukcijad) i lämbituzmašiništon tegimel.
 
 == Geografijan andmused ==
-Kaltan sijadase Kondom-jogen oiktal randal tobjimalaz ({{lang-ru|Кондома}}, [[Ob' (jogi)|Obin]] oigedpol'ne bassein), 225 m ü.m.t. keskmäižel korktusel. Matkad [[Kemerovo]]hosai om 218 km lodeheze-pohjoižhe orhal, 258 km avtol vai raudtedme. Lähembaižed lidnad oma [[Osinniki]] 10 km pohjoižpäivnouzmha i [[Novokuzneck]] 20 km pohjoižhe orhal sen röunhasai. Voib olda manrehkaidusid 6 ballhasai. Kivihilen löudmižsijad sijadasoiš päivlaskmha lidnaspäi.
+Kaltan sijadase Kondom-jogen oiktal randal tobjimalaz ({{lang-ru|Кондома}}, [[Ob' (jogi)|Obin]] oigedpol'ne bassein), 225 m ü.m.t. keskmäižel korktusel. Matkad [[Kemerovo]]hosai om 218 km lodeheze-pohjoižhe orhal, 258 km avtol vai raudtedme. Lähembaižed lidnad oma [[Osinniki]] 10 km pohjoižpäivnouzmha i [[Novokuzneck]] 20 km pohjoižhe orhal sen röunhasai.
+
+Voib olda manrehkaidusid 6 ballhasai. Kivihilen löudmižsijad sijadasoiš päivlaskmha lidnaspäi.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 21 892 ristitud, lidnümbrikon kaks' koumandest. Kaikiš suremb ristitišt oli 28 tuh. eläjid vl 1967. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman Katken pühäpert' om olmas lidnas, udessündutihe vll 2002−2008.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 21 892 ristitud, lidnümbrikon kaks' koumandest. Kaikiš suremb ristitišt oli 28 tuh. eläjid vl 1967.
 
-Kaltanan äiprofil'ne tehnikum om professionaližen opendusen aluzkundaks.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman Katken pühäpert'<ref>[http://sobory.ru/geo/locat/14865 Kaltanan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> om olmas lidnas, saudihe vll 2002−2008.
+
+Kaltanan äiprofil'ne tehnikum<ref>[http://gpoukamt.ru/ Kaltanan äiprofil'žen tehnikuman sait (''gpoukamt.ru'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://kaltan.net/ Lidnümbrikon tobmuden aluzkundoiden oficialine sait (''kaltan.net'').] {{ref-ru}}
