/* Leibhä sidodud vepsän muštatišed */ +

--- a/Leib.mw
+++ b/Leib.mw
@@ -26,6 +26,7 @@ Leib om mugoi produkt, kudamban tahtaz mülütab [[jauh]]od i [[vezi|vet]] minim
 <blockquote>
 * ''Eci, kut leibäd ecid, siloi löudad.''
 * ''Kodihine kromaine om kal'hemb edahašt plotud.''
+* ''Kuiv kromaine — koditomaine.''
 * ''Leib da vezi — saldatan söm.''
 * ''Mez' ei elä vaiše ühtel leibäl.''
 * ''Rahad da leib vellesed oma.''
