/* Sömhä sidodud vepsän muštatišed da ozoitesed */ +

--- a/Söm.mw
+++ b/Söm.mw
@@ -24,6 +24,7 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 * ''Ken aigoiš libui, se i söi, a ken möhäs libui, se luzikan noli.''
 * ''Ken radab, ka se i söb.''
 * ''Ken rahnob, se i söb.''
+* ''Kenen jaug kopsab, sen su-ki näpsab.''
 * ''Keza keradab, a tal'v söb.''
 * ''Lapses om äi ližad: kalan sab da kaks' söb.''
 * ''Lehm tanhal — söm pertiš.''
