/* Eloho sidodud vepsän muštatišed */ +

--- a/Elo.mw
+++ b/Elo.mw
@@ -23,6 +23,7 @@ Man irdpolel elo ei löudand, kosmine biologii tedoidab sen tundusid da gipoteti
 * ''Ken hätken eläb, se enamban nägeb.''
 * ''Ken ridata eläb, se abidata koleb.''
 * ''Ken tirpab, se hätken eläb.''
+* ''Kolijas eläbad ed tege.''
 </blockquote>
 
 == Kacu mugažo ==
