/* Ekonomikha sidodud vepsän muštatišed */ +

--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -37,6 +37,7 @@ Ekonomižen tedon funkcijad: tedonandai, praktine, endustusen, mail'mannägendan
 * ''Küzuda eile vargastada. / Küzundas ei lögoi.''
 * ''Läksin nitmaha, dai vikatehen unohtin.''
 * ''Lämoipalod mustoil ed sambuta.''
+* ''Mel't-se ei möskekoi.''
 * ''Mez' nimel ei elä, a radol.''
 * ''Orjale polušk, radnikale poltin, mastarile rubl'.''
 * ''Seibhid eile, ka aid vereb.''
