/* Opendushe sidodud vepsän muštatišed */ +

--- a/Openduz.mw
+++ b/Openduz.mw
@@ -102,6 +102,7 @@ Britanine joganedal'ne [[The Economist]]-lehtez kirjuti [[Vikipedii|Vikipedijan]
 * ''Ei koir ujumaha opete händad ligotamata.''
 * ''Igän eläd, igän openud.''
 * ''Maman openduz — kündushesai.''
+* ''Midä noren opendad, sidä vanhan muštad.''
 * ''Min norelaz opendatoi, sen rauhemba mahtad.''
 * ''Openda laps', kuni mučuine.''
 * ''Openda last kuni poikpoli sijas magadab.''
