/* Eloho sidodud vepsän muštatišed */ +

--- a/Elo.mw
+++ b/Elo.mw
@@ -20,6 +20,7 @@ Man irdpolel elo ei löudand, kosmine biologii tedoidab sen tundusid da gipoteti
 * ''Elo meleta kuti puzu reigunke.''
 * ''Eraz eläb, ku puzuhu paneb, a toine eläb, ku märgän mecan poltab.''
 * ''Igän eläd, igän openud.''
+* ''Kanzata om paha elo.''
 * ''Ken hätken eläb, se enamban nägeb.''
 * ''Ken ridata eläb, se abidata koleb.''
 * ''Ken tirpab, se hätken eläb.''
