/* Čomudehe sidodud vepsän muštatišed */ +

--- a/Čomuz.mw
+++ b/Čomuz.mw
@@ -16,6 +16,7 @@ Ristitun čomuz oleleb hibjan da irdpol'ne čomuz, i hengeline čomuz. Čomuden 
 * ''Čoma i unes čoma.''
 * ''Čoma sana i kivehe reigun tegeb.''
 * ''Ei kalliž ole čomuz, a kalliž om pä.''
+* ''Eraz emäg tegeb hubaspäi čoman, a eraz čomaspäi huban.''
 * ''Ičeiž mad armhembad, ičeiž mecad čomembad.''
 * ''Kand sädota, ka mugažo čoma linneb.''
 * ''Kuna sündud, sid' i čoma.''
