/* Ekonomikha sidodud vepsän muštatišed */ +

--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -26,6 +26,7 @@ Ekonomižen tedon funkcijad: tedonandai, praktine, endustusen, mail'mannägendan
 * ''Ei küzugoi, teravas-ik radab, küzutas, ken radab.''
 * ''Elokahanke ei sa suttäs, vägevanke ei ca borcuidas.''
 * ''Elokaz kut zatrib, a goll' kut voib.''
+* ''Eraz emäg tegeb hubaspäi čoman, a eraz čomaspäi huban.''
 * ''Hüvä da veraz, paha da ičeiž.''
 * ''Kaht jänišad küksendeled, ni üht ed tabada.''
 * ''Kebnas tuli, kebnas läksi.''
