/* Pajoho sidodud vepsän muštatišed */ +

--- a/Pajo.mw
+++ b/Pajo.mw
@@ -12,6 +12,7 @@ Pajo voib edestadas kut ühtel [[pajatai|pajatajal]], muga [[hor]]al-ki. Pajatad
 <blockquote>
 * ''Koumhesai pap' pajatab.''
 * ''Mitte linduine, mugoi(ne) i pajoine.''
+* ''Näl'ghišt ei pajatoita.''
 * ''Pahal lindul i pajod pahad oma.''
 * ''Pajata hot' karzn'as ka kuldas, voika hot' pertin päl ka ei kulgoi.''
 * ''Pajatada om paremb ühtes, a pagišta eriži.''
