/* Rahoiže sidodud vepsän muštatišed */ +

--- a/Rahad.mw
+++ b/Rahad.mw
@@ -20,6 +20,7 @@ Nügüd'aigan elektronižed rahad vajehtadas personaližid. Maksmižen tetpaiže
 
 == Rahoiže sidodud vepsän muštatišed ==
 <blockquote>
+* ''Den'gad rades tuldas, a vihel'dusel lähttas.''
 * ''Ei sa rahoid sandal sada, a pidab pidandal pidada.''
 * ''Korman ei käske.'' (rahoid ei ole)
 * ''Rahad da leib vellesed oma.''
