*Empty MediaWiki Message*

--- a/Keza.mw
+++ b/Keza.mw
@@ -4,7 +4,7 @@
 
 Koume kud mülüdas kezha: Pohjoižes mapoliškos — [[kezaku]], [[heinku]] da [[eloku]]; Suvižes mapoliškos — [[tal'vku]], [[viluku]] i [[uhoku]].
 
-== Kezaha sidotud vepsän muštatišed ==
+== Kezaha sidodud vepsän muštatišed ==
 <blockquote>
 * ''Keza keradab, a tal'v söb.''
 * ''Keza tal'veks radab, a tal'v kezaks.''
