--- a/Eländkodi.mw
+++ b/Eländkodi.mw
@@ -182,6 +182,7 @@ Vogelhaus Modell Eduard 4.JPG|Lindpertiine todesižen küläkodin kartte
 == Eländkodihe sidodud vepsän muštatišed da ozoitesed ==
 === Muštatišed ===
 <blockquote>
+* ''Meiden pertid sänke ei ridelkoi.''
 * ''Melev om pertine, a avadimen kadoti.''
 * ''Pert' tehmata ei tule.''
 * ''Toižes kodiš i vet toižin kandištas.''
