/* Meheze sidodud vepsän muštatišed */ +

--- a/Mez'.mw
+++ b/Mez'.mw
@@ -29,6 +29,7 @@ Mehen organizm om geterogametine, toižin sanoin kaks' erazvuittušt suguhromoso
 * ''Mez' nimel ei elä, a radol.''
 * ''Mez' söb, mez' sab, mehele andab Jumal.''
 * ''Mitte aig, mugoi i mez'.''
+* ''Mužik ei ole ak, lehm ei ole hebo.''
 * ''Mužik oli verdunu Piterin päle kümne vot, a Piter-se ei ni olend tenu.''
 * ''Oled mez' ka ole, a ed ole ka kole.''
 * ''Sanal voib mez' rikta.''
