/* Naižhe sidodud vepsän muštatišed */ +

--- a/Naine.mw
+++ b/Naine.mw
@@ -17,6 +17,7 @@ Naižen alaigäčud oma [[neičukaine]] i [[neižne]].
 * ''Kana eile lind, ak eile ristit.''
 * ''Koume akad dai suim.''
 * ''Kut ei sättugoi länged sigale, muga ei sättu vin akale.''
+* ''Mužik ei ole ak, lehm ei ole hebo.''
 * ''Vanh ak vinad job, laho pu vet vedab.''
 </blockquote>
 
