/* Lehmähä sidodud vepsän muštatišed da ozoitesed */ +

--- a/Lehm.mw
+++ b/Lehm.mw
@@ -50,15 +50,16 @@ Edel vazan sündutandad lupsandad ei ole 45..60 päivest. Maidnikan laktacijan p
 * ''Hüvä vaza kaht emid imeb, a paha ühten-ki kadotab.''
 * ''Kacta kuti lehm udehe kašlihe.''
 * ''Lehm tanhal — söm pertiš.''
+* ''Mužik ei ole ak, lehm ei ole hebo.''
 * ''Putub kondjale lehm, ka siloi i kargaidab.''
 * ''Siloi om aigad heinäd toda, konz lehm om kolnu.''
 </blockquote>
 
 === Ozoitesed ===
 <blockquote>
-Lehm seižub tanhal, sar'ved irdal (päč lämptäb).<br />
-Märg vaza aidan taga (kel' sus).<br />
-Nell' sizart kustas ühthe vädrha (lehmän lüpstas).
+* Lehm seižub tanhal, sar'ved irdal. (päč lämptäb)
+* Märg vaza aidan taga. (kel' sus)
+* Nell' sizart kustas ühthe vädrha. (lehmän lüpstas)
 </blockquote>
 
 == Kacu mugažo ==
