/* Heboho sidodud vepsän muštatišed da ozoitesed */ +

--- a/Hebo.mw
+++ b/Hebo.mw
@@ -52,6 +52,7 @@ Hebon söte kogoneb [[kagr]]aspäi i kuivatud heinäspäi päpaloin, vajehtadas 
 * ''Lahjoitud hebole suhu ei kactas.''
 * ''Laškal hebol edahaks ed aja.''
 * ''Mitte om hebo, mugoi regi-ki.''
+* ''Mužik ei ole ak, lehm ei ole hebo.''
 * ''Pahal radnikal i hebo radol nukkub''.
 * ''Vanh hebo vagod ei travi''.
 * ''Änižen taga hebo koli, a sinai jo händ sus.''
@@ -59,9 +60,9 @@ Hebon söte kogoneb [[kagr]]aspäi i kuivatud heinäspäi päpaloin, vajehtadas 
 
 === Ozoitesed ===
 <blockquote>
-* Hebo hirnui lidnas, a tägä vall'astuz särahti (jumalanjuru).
-* Pol'hebod,  pol'habad (segl).
-* Vellen hebošt ei voi tabata, sizaren laudruzuid ei voi kerata (ahav da taivaz).
+* Hebo hirnui lidnas, a tägä vall'astuz särahti. (jumalanjuru)
+* Pol'hebod,  pol'habad. (segl)
+* Vellen hebošt ei voi tabata, sizaren laudruzuid ei voi kerata. (ahav da taivaz)
 </blockquote>
 
 == Kacu mugažo ==
