--- a/Mez'.mw
+++ b/Mez'.mw
@@ -20,6 +20,7 @@ Mehen organizm om geterogametine, toižin sanoin kaks' erazvuittušt suguhromoso
 * ''Ei nimi mest pahenda, a mez' nimen.''
 * ''Ei olnu se mez' bedas, ken toižele ei abuta.''
 * ''Ei severz' mehid, kuverz' kadjoid.''
+* ''Iče ole mužik, siloi anda toižile-ki arv.''
 * ''Kala ecib süvemban, a mez' paremban.''
 * ''Küläd eile koiratomad, mad eile mehetomad.''
 * ''Mehel om mela kädes, venehen jumal veb.''
