--- a/Neičukaine.mw
+++ b/Neičukaine.mw
@@ -2,6 +2,11 @@
 [[Fail:PortraitGirl2005-2.jpg|thumb|right|250px|[[Portugalijalaižed|Portugalijalaine]] neičukaine]]
 '''Neičukaine''' vai '''Neidižkuluine''', vai '''Neidižlaps' ''', om naižsugun [[laps']].
 
+== Neičukaižhe sidodud vepsän muštatiž ==
+<blockquote>
+* ''Neičukaine rodiše, i paginaine zavodiše.''
+</blockquote>
+
 == Kacu mugažo ==
 * [[Naine]]
 * [[Neižne]]
