--- a/Kolonija_Tovar.mw
+++ b/Kolonija_Tovar.mw
@@ -10,17 +10,21 @@
  | Pind = 20
  | Fail = Iglesia San Martin de Tours II.jpg
  | Pämez' = 
- | Telefonkod = 
- | Aigvö = [[UTC]]-4:30
+ | Telefonkod = +58-33
+ | Aigvö = [[UTC]]−4
 }}
-'''Kolonija Tovar''' ([[ispanijan kel'|isp]].: ''Colonia Tovar'') om lidn [[Venesuel]]as.
+'''Kolonija Tovar''' ({{lang-es|Colonia Tovar}}) om lidn [[Venesuel]]an mererandišton keskuzpalas. Mülüb [[Aragua]]-štatha.
 
-Eläjiden lugu om 14 309 ristitud. Lidnan pind — 20 km<sup>2</sup>.
+Eläjiden lugu om 14 309 ristitud. Lidnan pind — 20 km².
 
 == Istorii ==
-Lidnan aluz om pandud vl 1843.
+Eländpunktan aluz om pandud sirdnikoil [[Saksanma]]späi vl 1843.
+
+== Irdkosketused ==
+* [http://coloniatovar.net/ Lidnan oficialine sait (''coloniatovar.net'').] {{ref-es}}
+{{Commons|Category:Colonia Tovar}}
 
 {{stub}}
-
 [[Kategorii:Venesuelan lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
+[[Kategorii:Aragua]]
