--- a/Kolonija_Tovar.mw
+++ b/Kolonija_Tovar.mw
@@ -15,10 +15,12 @@
 }}
 '''Kolonija Tovar''' ({{lang-es|Colonia Tovar}}) om lidn [[Venesuel]]an mererandišton keskuzpalas. Mülüb [[Aragua]]-štatha.
 
-Eläjiden lugu om 14 309 ristitud. Lidnan pind — 20 km².
+Eländpunktan aluz om pandud sirdnikoil [[Saksanma]]späi vl 1843. Saksan arhitekturan pertid oma kaičenus lidnas tähäsai i vedatadas turistoid.
 
-== Istorii ==
-Eländpunktan aluz om pandud sirdnikoil [[Saksanma]]späi vl 1843.
+== Geografijan andmused ==
+Lidn sijadase 65 km päivlaskmha [[Karakas]]-pälidnaspäi, [[Andad|Andiden]] pautkil, 1800 m ü.m.t. keskmäižel korktusel.
+
+Vl 2011 lidnan eläjiden lugu oli 14 309 ristitud. Municipalitetan ristitišt oli 21 tuhad eläjid 250 km² pindal vl 2016.
 
 == Irdkosketused ==
 * [http://coloniatovar.net/ Lidnan oficialine sait (''coloniatovar.net'').] {{ref-es}}
