--- a/Kolonija_Tovar.mw
+++ b/Kolonija_Tovar.mw
@@ -13,17 +13,20 @@
  | Telefonkod = +58-33
  | Aigvö = [[UTC]]−4
 }}
-'''Kolonija Tovar''' ({{lang-es|Colonia Tovar}}) om lidn [[Venesuel]]an mererandišton keskuzpalas. Mülüb [[Aragua]]-štatha.
+'''Kolonija Tovar''' ({{lang-es|Colonia Tovar}} «tovarkolonii») om lidn [[Venesuel]]an mererandišton keskuzpalas. Mülüb [[Aragua]]-štatha.
 
-Eländpunktan aluz om pandud sirdnikoil [[Saksanma]]späi vl 1843. Saksan arhitekturan pertid oma kaičenus lidnas tähäsai i vedatadas turistoid.
+== Istorii ==
+Eländpunktan aluz om pandud sirdnikoil [[Saksanma]]n Baden-gercogkundaspäi vl 1843. Saksan arhitekturan pertid oma kaičenus lidnas tähäsai i vedatadas turistoid.
+
+Kolonija Tovar šingotase sömtegimištol (olud, lihategesed), turizmal i maižandusel. Kazvatadas erazvuiččid maploduid, persikid, sadmanzikašt, änikoid.
 
 == Geografijan andmused ==
-Lidn sijadase 65 km päivlaskmha [[Karakas]]-pälidnaspäi, [[Andad|Andiden]] pautkil, 1800 m ü.m.t. keskmäižel korktusel.
+Lidn sijadase štatan pohjoižröunanno, 65 km päivlaskmha [[Karakas]]-pälidnaspäi, [[Andad|Andiden]] pautkil, 1850..2000 m ü.m.t. korktusil.
 
-Vl 2011 lidnan eläjiden lugu oli 14 309 ristitud. Municipalitetan ristitišt oli 21 tuhad eläjid 250 km² pindal vl 2016.
+Vl 2011 lidnan eläjiden lugu oli 14 309 ristitud, ristitišt ližadui severt-se kerdoid vspäi 1990. Municipalitetan ristitišt oli 21 600 eläjid 250 km² pindal vl 2016.
 
 == Irdkosketused ==
-* [http://coloniatovar.net/ Lidnan oficialine sait (''coloniatovar.net'').] {{ref-es}}
+* [http://tucoloniatovar.com/ Lidnan oficialine sait (''tucoloniatovar.com'').] {{ref-es}}
 {{Commons|Category:Colonia Tovar}}
 
 {{stub}}
