--- a/Kolonija_Tovar.mw
+++ b/Kolonija_Tovar.mw
@@ -13,7 +13,7 @@
  | Telefonkod = +58-33
  | Aigvö = [[UTC]]−4
 }}
-'''Kolonija Tovar''' ({{lang-es|Colonia Tovar}} «tovarkolonii») om lidn [[Venesuel]]an mererandišton keskuzpalas. Mülüb [[Aragua]]-štatha.
+'''Kolonija Tovar''' ({{lang-es|Colonia Tovar}} «tovarkolonii») om lidn [[Venesuel]]an mererandišton keskuzpalas. Se om Tovar-municipalitetan keskuz, mülüb [[Aragua]]-štatha.
 
 == Istorii ==
 Eländpunktan aluz om pandud sirdnikoil [[Saksanma]]n Baden-gercogkundaspäi vl 1843. Saksan arhitekturan pertid oma kaičenus lidnas tähäsai i vedatadas turistoid.
@@ -21,9 +21,9 @@ Eländpunktan aluz om pandud sirdnikoil [[Saksanma]]n Baden-gercogkundaspäi vl 
 Kolonija Tovar šingotase sömtegimištol (olud, lihategesed), turizmal i maižandusel. Kazvatadas erazvuiččid maploduid, persikid, sadmanzikašt, änikoid.
 
 == Geografijan andmused ==
-Lidn sijadase štatan pohjoižröunanno, 65 km päivlaskmha [[Karakas]]-pälidnaspäi, [[Andad|Andiden]] pautkil, 1850..2000 m ü.m.t. korktusil.
+Lidn sijadase štatan pohjoižröunanno, 15 kilometras Kariban meren randaspäi, [[Andad|Andiden]] pautkil, 1850..2000 m ü.m.t. korktusil. Matkad štatan [[Marakai]]-keskushesai om 70 km suvipäivlaskmha avtotedme, [[Karakas]]-pälidnhasai om 44 km orhal vai 65 km avtotel. Municipalitet levitase meren randhasai.
 
-Vl 2011 lidnan eläjiden lugu oli 14 309 ristitud, ristitišt ližadui severt-se kerdoid vspäi 1990. Municipalitetan ristitišt oli 21 600 eläjid 250 km² pindal vl 2016.
+Vl 2011 lidnan eläjiden lugu oli 14 309 ristitud, ristitišt ližadui severt-se kerdoid vspäi 1990. Municipalitetan ristitišt oli 21 600 eläjid 225 km² pindal vl 2016.
 
 == Irdkosketused ==
 * [http://tucoloniatovar.com/ Lidnan oficialine sait (''tucoloniatovar.com'').] {{ref-es}}
