--- a/Kolonija_Tovar.mw
+++ b/Kolonija_Tovar.mw
@@ -26,7 +26,7 @@ Lidn sijadase štatan pohjoižröunanno, 15 kilometras Kariban meren randaspäi,
 Vl 2011 lidnan eläjiden lugu oli 14 309 ristitud, ristitišt ližadui severt-se kerdoid vspäi 1990. Municipalitetan ristitišt oli 21 600 eläjid 225 km² pindal vl 2016.
 
 == Irdkosketused ==
-* [http://tucoloniatovar.com/ Lidnan oficialine sait (''tucoloniatovar.com'').] {{ref-es}}
+* [http://web.archive.org/web/20050922103036/http://www.coloniatovar.net/index2.htm Lidnan oficialine sait (''coloniatovar.net'') verkarhivas.] {{ref-es}}
 {{Commons|Category:Colonia Tovar}}
 
 {{stub}}
