--- a/.ao.mw
+++ b/.ao.mw
@@ -1,4 +1,6 @@
-'''.ao''' om [[Angol]]an [[DNS|Internet-domen]]. Se om avaitud [[1995. voz'|1995]]-nden voden 15. päiväl kül'mkud.<ref>[http://iana.org/domains/root/db/ao.html IANA — .ao Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
+'''.ao''' om [[Angol]]an [[DNS|Internet-domen]]. Se om avaitud [[1995. voz'|1995]]-nden voden 15. päiväl kül'mkud.<ref>[http://iana.org/domains/root/db/ao.html IANA — .ao Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Vn 2019 kezakuspäi kommertine registracii om avaitud, i vn 2020 vilukule koume tuhad domennimid oli jo .ao-zonas.
+
+Üks'jäine registrator om Angolas, se om valdkundaline. Registracii om lasktud koumandel tazopindal tobjimalaz, erasiš-se statjoiš kahtendel-ki tazopindal oikti. Vaiše Angolan rezident voib sada domennimed päiči .it.ao-aladomenas.
 
 == Homaičendad ==
 <references />
@@ -6,6 +8,7 @@
 == Irdkosketused ==
 * [http://www.dns.ao/ Domenan sait — Faculdade de Engenharia da Universidade Agostinho Neto (Agostin'jo Netton nimel nimitadud Universitetan inženerine fakul'tet, ''dns.ao'').] {{ref-pt}} {{ref-en}}
 * [http://iana.org/domains/root/db/ao.html IANA-informacii (''iana.org'').] {{ref-en}}
+{{Commons|Category:.ao}}
 
 {{CcTLD}}
 
