--- a/.ao.mw
+++ b/.ao.mw
@@ -2,6 +2,14 @@
 
 Üks'jäine registrator om Angolas, se om valdkundaline. Registracii om lasktud koumandel tazopindal tobjimalaz, erasiš-se statjoiš kahtendel-ki tazopindal oikti. Vaiše Angolan rezident voib sada domennimed päiči .it.ao-aladomenas.
 
+Kahtenden tazopindan reglamentiruidud domenad:
+* '''.ed.ao''' — opendusen aluzkundad
+* '''.gv.ao''' — valdkundaližed organad
+* '''.og.ao''' — Angolan miččed taht toižed organizacijad
+* '''.co.ao''' — Angolan kommertižed kompanijad
+* '''.pb.ao''' — pästandkodid
+* '''.it.ao''' — rahvahidenkeskeižed organizacijad registracijata Angolas.
+
 == Homaičendad ==
 <references />
 
