--- a/.ao.mw
+++ b/.ao.mw
@@ -1,6 +1,6 @@
 '''.ao''' om [[Angol]]an [[DNS|Internet-domen]]. Se om avaitud [[1995. voz'|1995]]-nden voden 15. päiväl kül'mkud.<ref>[http://iana.org/domains/root/db/ao.html IANA — .ao Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Vn 2019 kezakuspäi kommertine registracii om avaitud, i vn 2020 vilukule koume tuhad domennimid oli jo .ao-zonas.
 
-Üks'jäine registrator om Angolas, se om valdkundaline. Registracii om lasktud koumandel tazopindal tobjimalaz, erasiš-se statjoiš kahtendel-ki tazopindal oikti. Vaiše Angolan rezident voib sada domennimed päiči .it.ao-aladomenas.
+Üks'jäine registrator om Angolas, se om valdkundaline ''Serviços Públicos Electrónicos do Governo de Angola''. Registracii om lasktud koumandel tazopindal tobjimalaz, erasiš-se statjoiš kahtendel-ki tazopindal oikti. Vaiše Angolan rezident voib sada domennimed päiči .it.ao-aladomenas. Vozne maksmine tehnižes pid'oitelendas om 8 tuhad kvanzoid (2019).
 
 Kahtenden tazopindan reglamentiruidud domenad:
 * '''.ed.ao''' — opendusen aluzkundad
