--- a/.at.mw
+++ b/.at.mw
@@ -1,4 +1,13 @@
-'''.at''' om [[Avstrii|Avstrijan]] [[DNS|Internet-domen]]. Se om avaitud [[1988. voz'|1988]]-nden voden 20. päiväl vilukud.<ref>[http://iana.org/domains/root/db/at.html IANA — .at Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
+'''.at''' om [[Avstrii|Avstrijan]] [[DNS|Internet-domen]]. Se om avaitud [[1988. voz'|1988]]-nden voden 20. päiväl vilukud<ref>[http://iana.org/domains/root/db/at.html IANA — .at Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Vn 2021 tal'vkus enamba 1,4 mln domennimid oli .at-zonas.
+
+Registracii om lasktud kahtendel tazopindal röunadusita. Voib registriruida domennimed koumandel-ki tazopindal, no .gv.at- i .ac.at-aladomenoiš om röunadusid. Verazmaižile kävutajile om mel'he domennimid .at-lopunke, [[anglijan kel'|anglijan keles]] om äi sanoid -at-lopunke (oz., ''form.at''), at-prefiksan kävutand om populärine mugažo (oz., ''arrive.at'').
+
+Kahtenden tazopindan reglamentiruidud domenad:
+* '''.gv.at''' — valdkundaližed organad
+* '''.ac.at''' — tedon i opendusen aluzkundad
+* '''.co.at''' — kompanijad (joudjaline registracii)
+* '''.or.at''' — organizacijad (joudjaline registracii)
+* '''.priv.at''' — Avstrijan personad.
 
 == Homaičendad ==
 <references />
@@ -6,6 +15,7 @@
 == Irdkosketused ==
 * [http://www.nic.at/ Domenan sait — «nic.at GmbH» (''nic.at'').] {{ref-de}} {{ref-en}}
 * [http://iana.org/domains/root/db/at.html IANA-informacii (''iana.org'').] {{ref-en}}
+{{Commons|Category:.at}}
 
 {{CcTLD}}
 
