--- a/.at.mw
+++ b/.at.mw
@@ -1,3 +1,4 @@
+[[Fail:Dot-at domain logo.png|thumb|right|250px|Domenan logotip]]
 '''.at''' om [[Avstrii|Avstrijan]] [[DNS|Internet-domen]]. Se om avaitud [[1988. voz'|1988]]-nden voden 20. päiväl vilukud<ref>[http://iana.org/domains/root/db/at.html IANA — .at Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Vn 2021 tal'vkus enamba 1,4 mln domennimid oli .at-zonas.
 
 Registracii om lasktud kahtendel tazopindal röunadusita. Voib registriruida domennimed koumandel-ki tazopindal, no .gv.at- i .ac.at-aladomenoiš om röunadusid. Verazmaižile kävutajile om mel'he domennimid .at-lopunke, [[anglijan kel'|anglijan keles]] om äi sanoid -at-lopunke (oz., ''form.at''), at-prefiksan kävutand om populärine mugažo (oz., ''arrive.at'').
