--- a/Višnevskaja_Galina.mw
+++ b/Višnevskaja_Galina.mw
@@ -4,6 +4,13 @@
 }}
 '''Galina Pavlovna Višnevskaja (Ivanova)''' ({{lang-ru|Галина Павловна Вишневская (Иванова)}}; sünd. [[25. reduku]] [[1926]], [[Piter|Leningrad]], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]] — kol. [[11. tal'vku]] [[2012]], [[Moskv]], [[Venäma]]) oli tetab nevondkundaline i venälaine [[oper]]pajatai ([[soprano]]). [[NSTÜ:n rahvahan artist]] (1966).
 
+== Biografii ==
+Naižen laps'aig mäni [[Kronštadt]]as. Pavel Ivanov-tat (1904−1958) oli repressiruidud edel Surt sodad. Zinaida-mam koli vl 1950. Galina služi röunman sodavägiš kuz'toštkümnevoččen i jäi elegiš Leningradan blokadan aigan, ezini pajataks sodakoncertoil.
+
+Sodan aigan i sen jäl'ghe Galina openui muzikale da radoi Leningradan konservatorijas. Lopi opendust Moskvan konservatorijas vl 1966.
+
+Pajatai vändi äi rolid erazvuiččiš opersädusiš, ühtni gastrolihe verhiš maiš.
+
 == Homaičendad ==
 <references />
 
