--- a/Morken_Sverre.mw
+++ b/Morken_Sverre.mw
@@ -1,6 +1,8 @@
 {{Personalii}}
 '''Sverre Morken''' (mugažo [[norvegijan kel'|norvegijan kelel]]; sünd. [[19. sulaku]] [[1945]], [[Folldal]], [[Norvegii]]) om [[Norvegii|norvegijalaine]] pirdai i gravirui. Hän om [[Norvegijan valdkundznam]]an uden versijan (1992), äiluguižiden banknotoiden da počtmarkoiden tegii.
 
+Enamba koumekümned vot Morken gravirui počtmarkoid valdkundaližen počtan täht (''Posten Norge''). Hänen dizainan äjad norvegižed markad oliba nimitadud parahimiden keskes mail'mas. Mez' sädi enamba 150 markad, se om Norvegijan markoiden kümnendez vspäi 1855. Sen paloin, gravirui ühtni valdkundan standartižiden markoiden «Počtsar'vut»-serijan sädandaha.
+
 Ičeze studii i galerei om Morkenal Nord-Atndalenas. Nügüd'aigan pirdai om lebus, sab penzijad.
 
 == Homaičendad ==
